test_cases/tests/axum/generics.stderr
error: `#[axum_macros::debug_handler]` doesn't support generic functions
 --> tests/axum/generics.rs:4:17
  |
4 | async fn handler<T>() {}
  |                 ^^^
